minor mods by farsipal

--- a/fine-tune-whisper-streaming-cf11-el-v2.ipynb
+++ b/fine-tune-whisper-streaming-cf11-el-v2.ipynb
@@ -211,6 +211,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "87d9f898",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training el examples: 3402\n",
+      "Test el examples: 1696\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Training el examples:',len(raw_datasets['train']))\n",
+    "print('Test el examples:',len(raw_datasets['test']))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2d63b2d2-f68a-4d74-b7f1-5127f6d16605",
    "metadata": {},
