--- a/interleave_streaming_datasets.ipynb
+++ b/interleave_streaming_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6a5c0357",
    "metadata": {
     "collapsed": false,
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "794aaced",
    "metadata": {
     "collapsed": false,
@@ -34,8 +34,28 @@
    },
    "outputs": [],
    "source": [
-    "from datasets import Audio, interleave_datasets, IterableDataset, load_dataset\n",
+    "from datasets import Audio, interleave_datasets, IterableDataset, load_dataset, SplitDict\n",
     "from typing import List, Optional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b433ca30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_streaming_dataset(dataset_name, dataset_config_name, split, **kwargs):\n",
+    "    if \"+\" in split:\n",
+    "        # load multiple splits separated by the `+` symbol *with* streaming mode\n",
+    "        dataset_splits = [load_dataset(dataset_name, dataset_config_name, split=split_name, streaming=True, **kwargs) for split_name in split.split(\"+\")]\n",
+    "        # interleave multiple splits to form one dataset\n",
+    "        interleaved_dataset = interleave_datasets(dataset_splits)\n",
+    "        return interleaved_dataset\n",
+    "    else:\n",
+    "        # load a single split *with* streaming mode\n",
+    "        dataset = load_dataset(dataset_name, dataset_config_name, split=split, streaming=True, **kwargs)\n",
+    "        return dataset"
    ]
   },
   {
@@ -51,21 +71,40 @@
    "id": "fc07293f-3ba4-4e89-a4ca-8e39409a8373",
    "metadata": {},
    "source": [
-    "In this example, we'll show to combine the Common Voice 11, VoxPopuli, Mulitlingual LibriSpeech and FLEURS datasets for Spanish, giving a training corpus equal to the sum of the individual datasets. This is particularly beneficial in low-resource settings, where any one of the datasets alone might have insufficient data to train a model.\n",
+    "In this example, we'll show how to combine the Common Voice 11 and FLEURS datasets for Greek (el), parameters for , VoxPopuli, Mulitlingual LibriSpeech are commented out. The resulting training corpus will be equal to the sum of the individual datasets and the test dataset will be equal to the Common Voice 11 test split only. This is particularly beneficial in low-resource settings, where any one of the datasets alone might have insufficient data to train a model.\n",
     "\n",
-    "We need to specify the dataset names on the Hub, the corresponding configs and finally the text column names for the transcriptions:"
+    "The parameters required are shown below in lists of the same length, with one element per dataset:\n",
+    "\n",
+    "-   `dataset_names` contains the Hugging Face Hub name of the datasets\n",
+    "-   `dataset_config_names` contains the respective language codes.\n",
+    "-   `text_column_names` contains the name used for the text feature (column) in each respective dataset\n",
+    "-   `train_splits` and `test_splits` contain split names used for each respective dataset. If multiple splits need to be interleaved the names are concatenated into one string separated by the + sign. E.g to merge both test and validation the code should be `\"test+validation\"`. A split name `\"-\"` (dash) can be used to suppress a dataset. This for example is the case if you want the training datasets to contain two datasets and the test come only from the Common Voice 11. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c53344f3-c315-430a-a2f3-57aea6bb0e17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_names = [\"mozilla-foundation/common_voice_11_0\", \"facebook/voxpopuli\", \"facebook/multilingual_librispeech\", \"google/fleurs\"]\n",
-    "dataset_config_names = [\"es\", \"es\", \"spanish\", \"es_419\"]\n",
-    "text_column_names = [\"sentence\", \"normalized_text\", \"text\", \"transcription\"]"
+    "#dataset_names = [\"mozilla-foundation/common_voice_11_0\", \"facebook/voxpopuli\", \"facebook/multilingual_librispeech\", \"google/fleurs\"]\n",
+    "#dataset_config_names = [\"es\", \"es\", \"spanish\", \"es_419\"]\n",
+    "#text_column_names = [\"sentence\", \"normalized_text\", \"text\", \"transcription\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c53344f3-c315-430a-a2f3-57aea6bb0e17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_names = [\"mozilla-foundation/common_voice_11_0\", \"google/fleurs\"]\n",
+    "dataset_config_names = [\"el\", \"el_gr\"]\n",
+    "text_column_names = [\"sentence\",  \"transcription\"]\n",
+    "train_splits =[\"train+validation\",\"train+validation\"]\n",
+    "test_splits  = [\"test\",\"-\"]"
    ]
   },
   {
@@ -94,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "61eb4cb1-ee27-4270-a474-1bb33e1df65f",
    "metadata": {},
    "outputs": [],
@@ -102,7 +141,8 @@
     "def load_multiple_streaming_datasets(\n",
     "    dataset_names: List,\n",
     "    dataset_config_names: List,\n",
-    "    splits: Optional[List] = None,\n",
+    "    train_splits: Optional[List] = None,\n",
+    "    test_splits: Optional[List] = None,\n",
     "    text_column_names: Optional[List] = None,\n",
     "    sampling_rate: Optional[int] = 16000,\n",
     "    stopping_strategy: Optional[str] = \"all_exhausted\",\n",
@@ -115,9 +155,14 @@
     "            f\" {len(dataset_config_names)} configs.\"\n",
     "        )\n",
     "\n",
-    "    if splits is not None and len(splits) != len(dataset_names):\n",
+    "    if train_splits is not None and len(train_splits) != len(dataset_names):\n",
     "        raise ValueError(\n",
-    "            f\"Ensure one split is passed for each dataset, got {len(dataset_names)} datasets and {len(splits)} splits.\"\n",
+    "            f\"Ensure one train_split is passed for each dataset, got {len(dataset_names)} datasets and {len(train_splits)} splits.\"\n",
+    "        )\n",
+    "\n",
+    "    if test_splits is not None and len(test_splits) != len(dataset_names):\n",
+    "        raise ValueError(\n",
+    "            f\"Ensure one test_split is passed for each dataset, got {len(dataset_names)} datasets and {len(test_splits)} splits.\"\n",
     "        )\n",
     "\n",
     "    if text_column_names is not None and len(text_column_names) != len(dataset_names):\n",
@@ -126,26 +171,54 @@
     "            f\" {len(text_column_names)} text column names.\"\n",
     "        )\n",
     "\n",
-    "    splits = splits if splits is not None else [\"train\" for i in range(len(dataset_names))]\n",
+    "    train_splits = train_splits if train_splits is not None \\\n",
+    "        else [\"train\" for i in range(len(dataset_names))]\n",
+    "\n",
+    "    test_splits = test_splits if test_splits is not None \\\n",
+    "        else [\"test\" for i in range(len(dataset_names))]\n",
+    "\n",
     "    text_column_names = (\n",
     "        text_column_names if text_column_names is not None else [\"text\" for i in range(len(dataset_names))]\n",
     "    )\n",
     "\n",
-    "    all_datasets = []\n",
-    "    # iterate over the datasets we want to interleave\n",
-    "    for i, dataset_name in enumerate(dataset_names):\n",
-    "        dataset = load_dataset(dataset_name, dataset_config_names[i], split=splits[i], streaming=True, **kwargs)\n",
-    "        # resample to specified sampling rate\n",
-    "        dataset = dataset.cast_column(\"audio\", Audio(sampling_rate))\n",
-    "        #  normalise columns to [\"audio\", \"sentence\"]\n",
-    "        if text_column_names[i] != \"sentence\":\n",
-    "            dataset = dataset.rename_column(text_column_names[i], \"sentence\")\n",
-    "        dataset = dataset.remove_columns(set(dataset.features.keys()) - set([\"audio\", \"sentence\"]))\n",
-    "        all_datasets.append(dataset)\n",
     "\n",
-    "    interleaved_dataset = interleave_datasets(all_datasets, stopping_strategy=stopping_strategy)\n",
-    "    return interleaved_dataset"
+    "    all_datasets = []\n",
+    "    all_train_splits = []\n",
+    "    all_test_splits  = []\n",
+    "    # iterate over the datasets we want to interleave\n",
+    "    for dset, cfgNm, trnSplit, tstSplit, colNm in zip(dataset_names,dataset_config_names,train_splits,test_splits,text_column_names):\n",
+    "\n",
+    "        train_dset_splits = [load_dataset(dset, cfgNm, split=c, streaming=True, **kwargs) for c in trnSplit.split('+') if c != '-']\n",
+    "        test_dset_splits  = [load_dataset(dset, cfgNm, split=c, streaming=True, **kwargs) for c in tstSplit.split('+') if c != '-']\n",
+    "\n",
+    "        train_dset_splits = [ds.cast_column(\"audio\", Audio(sampling_rate)) for ds in train_dset_splits]\n",
+    "        test_dset_splits  = [ds.cast_column(\"audio\", Audio(sampling_rate)) for ds in test_dset_splits]\n",
+    "\n",
+    "        train_dset_splits = [ds.rename_column(colNm, \"text\") for ds in train_dset_splits]\n",
+    "        test_dset_splits  = [ds.rename_column(colNm, \"text\") for ds in test_dset_splits]\n",
+    "\n",
+    "        cols2keep = set([\"audio\", \"text\"])\n",
+    "\n",
+    "        train_dset_splits = [ds.remove_columns(set(ds.features.keys()) - cols2keep) for ds in train_dset_splits]\n",
+    "        test_dset_splits  = [ds.remove_columns(set(ds.features.keys()) - cols2keep) for ds in test_dset_splits]\n",
+    "\n",
+    "        all_train_splits +=   train_dset_splits\n",
+    "        all_test_splits  +=   test_dset_splits\n",
+    "\n",
+    "\n",
+    "    interleaved_train_dataset = interleave_datasets(all_train_splits, stopping_strategy=stopping_strategy)\n",
+    "    interleaved_test_dataset = interleave_datasets(all_test_splits, stopping_strategy=stopping_strategy)\n",
+    "\n",
+    "    return interleaved_train_dataset, interleaved_test_dataset"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3539c8ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -157,12 +230,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8ae90f83-4ecd-46a3-98be-bd75706e0d88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = load_multiple_streaming_datasets(dataset_names, dataset_config_names=dataset_config_names, text_column_names=text_column_names, use_auth_token=True)"
+    "train_ds, test_ds = load_multiple_streaming_datasets(dataset_names, \n",
+    "        dataset_config_names=dataset_config_names, \n",
+    "        train_splits = train_splits,\n",
+    "        test_splits = test_splits,\n",
+    "        text_column_names=text_column_names, \n",
+    "        use_auth_token=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e31aa85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('train',train_ds.dataset_size)\n",
+    "print('test',train_ds.dataset_size)\n"
    ]
   },
   {
@@ -183,38 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "75b3355a-3c06-4d23-af43-2b93b1ad70b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Reading metadata...: 230467it [00:41, 5545.80it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 ¿ Qué tal a tres de cinco ?\n",
-      "1 y desde luego esa razón no puede tener que ver con la explicación surrealista que hemos escuchado más de una vez de que se trata de una conspiración izquierdista.\n",
-      "2 para exclamar con voz de acción de gracias y para contar todas tus maravillas jehová la habitación de tu casa he amado y el lugar del tabernáculo de tu gloria no juntes con los pecadores mi alma ni con los hombres de sangres mi vida\n",
-      "3 el uso de internet y de la red informática mundial permite que los estudiantes tengan acceso a la información en todo momento\n",
-      "4 vamos , quiero decir , que no soy de citas especiales .\n",
-      "5 si bien esta lista no es perfecta sí que resulta necesario que las entidades financieras refuercen sus controles.\n",
-      "6 oye oh jehová mi voz con que á ti clamo y ten misericordia de mí respóndeme mi corazón ha dicho de ti buscad mi rostro tu rostro buscaré oh jehová\n",
-      "7 los deportes de nieve en descenso como el esquí y la tablanieve son disciplinas populares que consisten en deslizarse con esquís o una tabla fijada a los pies sobre un terreno nevado\n",
-      "8 fray Lope , en aquel momento , colmaba otro vaso igual :\n",
-      "9 señora presidenta la competitividad es importante pero no puede ser el único criterio.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i, sample in enumerate(ds):\n",
-    "    print(i, sample[\"sentence\"])\n",
-    "    if i == 9:\n",
+    "for i, sample in enumerate(test_ds):\n",
+    "    print(i, sample[\"text\"])\n",
+    "    if i == 20:\n",
     "        break"
    ]
   },
@@ -230,19 +295,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ed20e9cd-31c2-44cb-872b-333378a92fd1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sanchitgandhi/venv/lib/python3.8/site-packages/jax/_src/lib/__init__.py:33: UserWarning: JAX on Mac ARM machines is experimental and minimally tested. Please see https://github.com/google/jax/issues/5501 in the event of problems.\n",
-      "  warnings.warn(\"JAX on Mac ARM machines is experimental and minimally tested. \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers.models.whisper.english_normalizer import BasicTextNormalizer\n",
     "\n",
@@ -262,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "26e42417-4bd2-46f8-914e-3a6f9f3471ac",
    "metadata": {},
    "outputs": [],
@@ -288,34 +344,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0babac71-9157-4d0f-a8a8-184547bdf501",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Reading metadata...: 230467it [00:32, 6984.59it/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0  qué tal a tres de cinco \n",
-      "1 y desde luego esa razón no puede tener que ver con la explicación surrealista que hemos escuchado más de una vez de que se trata de una conspiración izquierdista \n",
-      "2 para exclamar con voz de acción de gracias y para contar todas tus maravillas jehová la habitación de tu casa he amado y el lugar del tabernáculo de tu gloria no juntes con los pecadores mi alma ni con los hombres de sangres mi vida\n",
-      "3 el uso de internet y de la red informática mundial permite que los estudiantes tengan acceso a la información en todo momento\n",
-      "4 vamos quiero decir que no soy de citas especiales \n",
-      "5 si bien esta lista no es perfecta sí que resulta necesario que las entidades financieras refuercen sus controles \n",
-      "6 oye oh jehová mi voz con que á ti clamo y ten misericordia de mí respóndeme mi corazón ha dicho de ti buscad mi rostro tu rostro buscaré oh jehová\n",
-      "7 los deportes de nieve en descenso como el esquí y la tablanieve son disciplinas populares que consisten en deslizarse con esquís o una tabla fijada a los pies sobre un terreno nevado\n",
-      "8 fray lope en aquel momento colmaba otro vaso igual \n",
-      "9 señora presidenta la competitividad es importante pero no puede ser el único criterio \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ds = ds.map(normalize_transcriptions)\n",
     "\n",
@@ -336,7 +368,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.8 ('whisper')",
    "language": "python",
    "name": "python3"
   },
@@ -350,7 +382,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "56df8cc7a7ee396247f1aaa79087483e047b61a4716ebb1fc601848c69339422"
+   }
   }
  },
  "nbformat": 4,
