--- a/interleave_streaming_datasets.ipynb
+++ b/interleave_streaming_datasets.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b4f1f016",
+   "metadata": {},
+   "source": [
+    "# Interleaving Datasets\n",
+    "\n",
+    "Original: sanchit-gandhi \\\n",
+    "This version: Michael Kamfonas (Farsipal)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6a5c0357",
@@ -21,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "794aaced",
    "metadata": {
     "collapsed": false,
@@ -39,46 +50,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b433ca30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_streaming_dataset(dataset_name, dataset_config_name, split, **kwargs):\n",
-    "    if \"+\" in split:\n",
-    "        # load multiple splits separated by the `+` symbol *with* streaming mode\n",
-    "        dataset_splits = [load_dataset(dataset_name, dataset_config_name, split=split_name, streaming=True, **kwargs) for split_name in split.split(\"+\")]\n",
-    "        # interleave multiple splits to form one dataset\n",
-    "        interleaved_dataset = interleave_datasets(dataset_splits)\n",
-    "        return interleaved_dataset\n",
-    "    else:\n",
-    "        # load a single split *with* streaming mode\n",
-    "        dataset = load_dataset(dataset_name, dataset_config_name, split=split, streaming=True, **kwargs)\n",
-    "        return dataset"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f210ca9a-486b-46a2-a675-2526a9bd83f5",
    "metadata": {},
    "source": [
-    "### Define the dataset attributes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc07293f-3ba4-4e89-a4ca-8e39409a8373",
-   "metadata": {},
-   "source": [
-    "In this example, we'll show how to combine the Common Voice 11 and FLEURS datasets for Greek (el), parameters for , VoxPopuli, Mulitlingual LibriSpeech are commented out. The resulting training corpus will be equal to the sum of the individual datasets and the test dataset will be equal to the Common Voice 11 test split only. This is particularly beneficial in low-resource settings, where any one of the datasets alone might have insufficient data to train a model.\n",
+    "### Define the dataset attributes\n",
     "\n",
-    "The parameters required are shown below in lists of the same length, with one element per dataset:\n",
-    "\n",
-    "-   `dataset_names` contains the Hugging Face Hub name of the datasets\n",
-    "-   `dataset_config_names` contains the respective language codes.\n",
-    "-   `text_column_names` contains the name used for the text feature (column) in each respective dataset\n",
-    "-   `train_splits` and `test_splits` contain split names used for each respective dataset. If multiple splits need to be interleaved the names are concatenated into one string separated by the + sign. E.g to merge both test and validation the code should be `\"test+validation\"`. A split name `\"-\"` (dash) can be used to suppress a dataset. This for example is the case if you want the training datasets to contain two datasets and the test come only from the Common Voice 11. "
+    "The cell below is the original example including parameters for VoxPopuli and Mulitlingual LibriSpeech. These parameters may become handy if someone wants to inlcude these  datasets, so it\n",
+    "is here commented out for reference."
    ]
   },
   {
@@ -88,14 +67,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#  \n",
     "#dataset_names = [\"mozilla-foundation/common_voice_11_0\", \"facebook/voxpopuli\", \"facebook/multilingual_librispeech\", \"google/fleurs\"]\n",
     "#dataset_config_names = [\"es\", \"es\", \"spanish\", \"es_419\"]\n",
     "#text_column_names = [\"sentence\", \"normalized_text\", \"text\", \"transcription\"]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc07293f-3ba4-4e89-a4ca-8e39409a8373",
+   "metadata": {},
+   "source": [
+    "The example I use in this version shows how to combine the Common Voice 11 and FLEURS datasets for Greek (el). The modified version below produces interleaved datasets for both training and testing.\n",
+    "\n",
+    "-   The resulting training corpus will be equal to the sum of the individual datasets and we will use both test and validation splits for both. \n",
+    "-   The test dataset will be equal to the **Common Voice 11 Test split only**. \n",
+    "\n",
+    "The parameters defined in the next cell are explained below. \n",
+    "\n",
+    "-   All parameters are in lists of the same length with one element per dataset.\n",
+    "-   `dataset_names` contains the Hugging Face Hub namea of each of the datasets used\n",
+    "-   `dataset_config_names` contains the respective language codes.  \n",
+    "-   `text_column_names` contains the name used for the text feature (column) for each respective dataset.\n",
+    "-   `train_splits` and `test_splits` contain split names used for the train and test interleaved datasets we will produce. If multiple splits need to be interleaved for any of the datasets, the respective split-names are concatenated into one string separated by the + sign. E.g to merge both train and validation the code should be `\"train+validation\"`. A special split name `\"-\"` (dash) can be used to suppress a dataset-split. This for example is the case for the test dataset which is based only on the Common Voice 11 test, and the fleurs test excluded. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c53344f3-c315-430a-a2f3-57aea6bb0e17",
    "metadata": {},
    "outputs": [],
@@ -104,7 +103,7 @@
     "dataset_config_names = [\"el\", \"el_gr\"]\n",
     "text_column_names = [\"sentence\",  \"transcription\"]\n",
     "train_splits =[\"train+validation\",\"train+validation\"]\n",
-    "test_splits  = [\"test\",\"-\"]"
+    "test_splits  = [\"test\",\"-\"] # we want the test to come from one dataset only"
    ]
   },
   {
@@ -133,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "61eb4cb1-ee27-4270-a474-1bb33e1df65f",
    "metadata": {},
    "outputs": [],
@@ -178,21 +177,26 @@
     "        else [\"test\" for i in range(len(dataset_names))]\n",
     "\n",
     "    text_column_names = (\n",
-    "        text_column_names if text_column_names is not None else [\"text\" for i in range(len(dataset_names))]\n",
+    "        text_column_names if text_column_names is not None \\\n",
+    "            else [\"text\" for i in range(len(dataset_names))]\n",
     "    )\n",
     "\n",
     "\n",
-    "    all_datasets = []\n",
     "    all_train_splits = []\n",
     "    all_test_splits  = []\n",
     "    # iterate over the datasets we want to interleave\n",
-    "    for dset, cfgNm, trnSplit, tstSplit, colNm in zip(dataset_names,dataset_config_names,train_splits,test_splits,text_column_names):\n",
+    "    for dset, cfgNm, trnSplit, tstSplit, colNm in zip(dataset_names,dataset_config_names,\\\n",
+    "                                                train_splits,test_splits,text_column_names):\n",
     "\n",
-    "        train_dset_splits = [load_dataset(dset, cfgNm, split=c, streaming=True, **kwargs) for c in trnSplit.split('+') if c != '-']\n",
-    "        test_dset_splits  = [load_dataset(dset, cfgNm, split=c, streaming=True, **kwargs) for c in tstSplit.split('+') if c != '-']\n",
+    "        train_dset_splits = [load_dataset(dset, cfgNm, split=c, streaming=True, **kwargs) \\\n",
+    "            for c in trnSplit.split('+') if c != '-']\n",
+    "        test_dset_splits  = [load_dataset(dset, cfgNm, split=c, streaming=True, **kwargs) \\\n",
+    "            for c in tstSplit.split('+') if c != '-']\n",
     "\n",
-    "        train_dset_splits = [ds.cast_column(\"audio\", Audio(sampling_rate)) for ds in train_dset_splits]\n",
-    "        test_dset_splits  = [ds.cast_column(\"audio\", Audio(sampling_rate)) for ds in test_dset_splits]\n",
+    "        train_dset_splits = [ds.cast_column(\"audio\", Audio(sampling_rate)) \\\n",
+    "            for ds in train_dset_splits]\n",
+    "        test_dset_splits  = [ds.cast_column(\"audio\", Audio(sampling_rate)) \\\n",
+    "            for ds in test_dset_splits]\n",
     "\n",
     "        train_dset_splits = [ds.rename_column(colNm, \"text\") for ds in train_dset_splits]\n",
     "        test_dset_splits  = [ds.rename_column(colNm, \"text\") for ds in test_dset_splits]\n",
@@ -204,8 +208,7 @@
     "\n",
     "        all_train_splits +=   train_dset_splits\n",
     "        all_test_splits  +=   test_dset_splits\n",
-    "\n",
-    "\n",
+    "        \n",
     "    interleaved_train_dataset = interleave_datasets(all_train_splits, stopping_strategy=stopping_strategy)\n",
     "    interleaved_test_dataset = interleave_datasets(all_test_splits, stopping_strategy=stopping_strategy)\n",
     "\n",
@@ -213,24 +216,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3539c8ce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "29bc228b-ce9b-4cee-9092-1223ddfa51ad",
    "metadata": {},
    "source": [
-    "Let's apply this function to load and merge our four datasets:"
+    "Let's apply this function to load and merge our train and test the dataset dataset splits:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8ae90f83-4ecd-46a3-98be-bd75706e0d88",
    "metadata": {},
    "outputs": [],
@@ -245,10 +240,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2e31aa85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train None\n",
+      "test None\n"
+     ]
+    }
+   ],
    "source": [
     "print('train',train_ds.dataset_size)\n",
     "print('test',train_ds.dataset_size)\n"
@@ -272,12 +276,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "75b3355a-3c06-4d23-af43-2b93b1ad70b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reading metadata...: 1914it [00:00, 6148.46it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 πρόσταξε το Βασιλόπουλο.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reading metadata...: 1701it [00:00, 6318.92it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Άλογο; Ο Τζοτζές έχει άλογο;\n",
+      "2 στη βάση του βουνού αναφέρθηκε η παρουσία σκοτεινών συννέφων που δεν σχετίζονταν με ηφαιστιακή δραστηριότητα\n",
+      "3 αυτά αποτελούν πλέον ξεχωριστές αρχές  οι οποίες εστιάζουν στην παροχή λύσεων σε πραγματικά προβλήματα της καθημερινότητας\n",
+      "4 θυμήθηκα, σαν ήλθε η ώρα, τα λόγια μου.\n",
+      "5 ρώτησε το πεύκο σκανδαλισμένο.\n",
+      "6 συχνά είναι πιο αυτόνομοι από τα συμβατικά μέλη της ομάδας καθώς οι ομάδες τους μπορεί να συναντώνται σύμφωνα με διαφορετικές χρονικές ζώνες κάτι που μπορεί να μην είναι αποδεκτό από την τοπική τους διοίκηση\n",
+      "7 το nhk δήλωσε επίσης ότι ο πυρηνικός σταθμός ηλεκτρικής ενέργειας κασιβαζάκι-καρίβα στον νομό νιιγκάτα λειτουργούσε κανονικά\n",
+      "8 Ύστερα είπε\n",
+      "9 Ώστε ο ήλιος είχε βασιλέψει\n",
+      "10 υπάρχουν άπειρες πιθανές παραλλαγές αλλά αυτό συνεχίζουν να εννοούν οι περισσότεροι άνθρωποι όταν λένε «πάω στο ντίσνεϊ γουορλντ»\n",
+      "11 η έρευνα στην τεχνητή νοημοσύνη περιλαμβάνει την κατασκευή μηχανών με σκοπό την αυτοματοποίηση εργασιών που απαιτούν νοήμονα συμπεριφορά\n",
+      "12 Την έκλεισε σ' ένα σκαλισμένο, ασημένιο κουτί και την έδωσε στον αρχικαγκελάριο.\n",
+      "13 και της τα έδωσε.\n",
+      "14 το κτίριο φιλοξενούσε προσκυνητές που επισκέφτηκαν την ιερή πόλη την παραμονή του προσκυνήματος χατζ\n",
+      "15 τα πρώτα κρούσματα της ασθένειας για φέτος καταγράφηκαν στα τέλη ιουλίου\n",
+      "16 του κάκου τον γυρεύεις, Αφέντη μου!\n",
+      "17 Τώρα έλα συ\n",
+      "18 η χρήση εφαρμογών πλοήγησης gps στο τηλέφωνό σας μπορεί να γίνει ο πιο εύκολος και ο πιο πρακτικός τρόπος να πλοηγηθείτε όταν δεν βρίσκεστε στη χώρα σας\n",
+      "19 οι περισσότερες περιοχές εξυπηρετούνται από μικρά ιαπωνικά λεωφορεία τύπου coaster τα οποία χαρακτηρίζονται από την άνεση και την ανθεκτικότητά τους\n",
+      "20 και ήλθα να σε βρω.\n"
+     ]
+    }
+   ],
    "source": [
-    "for i, sample in enumerate(test_ds):\n",
+    "for i, sample in enumerate(train_ds):\n",
     "    print(i, sample[\"text\"])\n",
     "    if i == 20:\n",
     "        break"
@@ -288,22 +340,20 @@
    "id": "42d5ad08-b20e-4cba-a1a9-909fdbf030d4",
    "metadata": {},
    "source": [
-    "We can see that the transcriptions take several different formats. Those from Common Voice 11 are cased and punctuated. Those from VoxPopuli are punctuated only. Those from Multilingual LibriSpeech and FLEURS are neither cased not punctuated. We need to normalise the transcriptions to a uniform format before training our model. \n",
-    "\n",
     "The following code cell is lifted from the Whisper training notebook: https://github.com/huggingface/community-events/blob/main/whisper-fine-tuning-event/fine-tune-whisper-streaming.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ed20e9cd-31c2-44cb-872b-333378a92fd1",
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers.models.whisper.english_normalizer import BasicTextNormalizer\n",
     "\n",
-    "do_lower_case = True\n",
-    "do_remove_punctuation = True\n",
+    "do_lower_case = False\n",
+    "do_remove_punctuation = False\n",
     "\n",
     "normalizer = BasicTextNormalizer()"
    ]
@@ -318,19 +368,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "26e42417-4bd2-46f8-914e-3a6f9f3471ac",
    "metadata": {},
    "outputs": [],
    "source": [
     "def normalize_transcriptions(batch):\n",
     "    # optional pre-processing steps\n",
-    "    transcription = batch[\"sentence\"]\n",
+    "    transcription = batch[\"text\"]\n",
     "    if do_lower_case:\n",
     "        transcription = transcription.lower()\n",
     "    if do_remove_punctuation:\n",
     "        transcription = normalizer(transcription).strip()\n",
-    "    batch[\"sentence\"] = transcription\n",
+    "    batch[\"text\"] = transcription\n",
     "    return batch"
    ]
   },
@@ -344,15 +394,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0babac71-9157-4d0f-a8a8-184547bdf501",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reading metadata...: 1914it [00:00, 9923.14it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 πρόσταξε το Βασιλόπουλο.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reading metadata...: 1701it [00:00, 12544.57it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Άλογο; Ο Τζοτζές έχει άλογο;\n",
+      "2 στη βάση του βουνού αναφέρθηκε η παρουσία σκοτεινών συννέφων που δεν σχετίζονταν με ηφαιστιακή δραστηριότητα\n",
+      "3 αυτά αποτελούν πλέον ξεχωριστές αρχές  οι οποίες εστιάζουν στην παροχή λύσεων σε πραγματικά προβλήματα της καθημερινότητας\n",
+      "4 θυμήθηκα, σαν ήλθε η ώρα, τα λόγια μου.\n",
+      "5 ρώτησε το πεύκο σκανδαλισμένο.\n",
+      "6 συχνά είναι πιο αυτόνομοι από τα συμβατικά μέλη της ομάδας καθώς οι ομάδες τους μπορεί να συναντώνται σύμφωνα με διαφορετικές χρονικές ζώνες κάτι που μπορεί να μην είναι αποδεκτό από την τοπική τους διοίκηση\n",
+      "7 το nhk δήλωσε επίσης ότι ο πυρηνικός σταθμός ηλεκτρικής ενέργειας κασιβαζάκι-καρίβα στον νομό νιιγκάτα λειτουργούσε κανονικά\n",
+      "8 Ύστερα είπε\n",
+      "9 Ώστε ο ήλιος είχε βασιλέψει\n"
+     ]
+    }
+   ],
    "source": [
-    "ds = ds.map(normalize_transcriptions)\n",
+    "ds = train_ds.map(normalize_transcriptions)\n",
     "\n",
     "for i, sample in enumerate(ds):\n",
-    "    print(i, sample[\"sentence\"])\n",
+    "    print(i, sample[\"text\"])\n",
     "    if i == 9:\n",
     "        break"
    ]
